--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -699,4 +699,7 @@ Error text: {1}</value>
     <value>Stopped</value>
     <comment>Status message</comment>
   </data>
+  <data name="TransportBar_Label" xml:space="preserve">
+    <value>Transport Bar</value>
+  </data>
 </root>
